--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 # This file is used to ignore files which are generated
 # ----------------------------------------------------------------------------
 
@@ -36,43 +35,23 @@ Thumbs.db
 /.qmake.cache
 /.qmake.stash
 
-# qtcreator generated files
-*.pro.user*
-
 # xemacs temporary files
 *.flc
 
 # Vim temporary files
 .*.swp
 
-# Visual Studio generated files
-*.ib_pdb_index
-*.idb
-*.ilk
-*.pdb
-*.sln
-*.suo
-*.vcproj
-*vcproj.*.*.user
-*.ncb
-*.sdf
-*.opensdf
-*.vcxproj
-*vcxproj.*
-
 # MinGW generated files
 *.Debug
 *.Release
 
-# Python byte code
-*.pyc
 
-# Binaries
+# Binaries and hex
 # --------
-*.dll
-*.exe
+*.bin
+*.hex
 
-=======
+# =======
 # For PCBs designed using KiCad: http://www.kicad-pcb.org/
 # Format documentation: http://kicad-pcb.org/help/file-formats/
 
@@ -99,4 +78,3 @@ fp-info-cache
 # Exported BOM files
 *.xml
 *.csv
->>>>>>> c9893a09587eac66c51aaaebb22f292a2baea5d6
